fixed overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-.main {
+main {
   display: flex;
   flex-direction: row;
   height: 100vh;
